# alns_brkga3

./: .gitignore  CMakeLists.txt  README.md  validate_vrprpd.py
data/: cvrp  tsp  vrprpd
include/: cvrp_solver.hpp  solver_common.hpp  tsp_solver.hpp  vrprpd_decoder.cuh  vrprpd_solver.hpp
src/: cvrp_solver.cu  main.cu  tsp_solver.cu  vrprpd_solver.cu
